--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dependencies": {
         "through": "~2.3.4",
         "gulp-util": "~2.2.14",
-        "autopolyfiller": "1.4.x"
+        "autopolyfiller": "1.5.x"
     },
     "devDependencies": {
         "mocha": "*",
@@ -34,7 +34,8 @@
         "jshint": "2.1.3",
         "jscs": "1.0.0",
         "chai": "*",
-        "mocha-istanbul": "*"
+        "mocha-istanbul": "*",
+        "esprima-fb": "8001.2001.0-dev-harmony-fb"
     },
     "engineStrict": true,
     "engines": {
